// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute attesterSupply endpoint should return success 1`] = `
{
  "data": {
    "result": "78998232600",
  },
  "result": "78998232600",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1704110400000,
    "providerDataRequestedUnixMs": 1704110400000,
  },
}
`;

exports[`execute attesterSupply endpoint should use attesterSupply as default endpoint 1`] = `
{
  "data": {
    "result": "78998232600",
  },
  "result": "78998232600",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1704110400000,
    "providerDataRequestedUnixMs": 1704110400000,
  },
}
`;

exports[`execute daSupply endpoint should return success 1`] = `
{
  "data": {
    "result": "210000001234567890",
  },
  "result": "210000001234567890",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1704110400000,
    "providerDataRequestedUnixMs": 1704110400000,
  },
}
`;

exports[`execute reserves endpoint should return success 1`] = `
{
  "data": {
    "result": "100000000",
  },
  "result": "100000000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1704110400000,
    "providerDataRequestedUnixMs": 1704110400000,
  },
}
`;
